# vivaldi

./: Makefile  README.org  pyproject.toml
.github/workflows/: test.yml
assets/: vivaldi.proto
tests/: test_vivaldi.py
vivaldi/: call.py  cli.py  turn.py  types.py  vivaldi_pb2.py  vivaldi_pb2.pyi
