[tool.poetry]
name = "vivaldi"
version = "0.2.0"
description = "Tools for working with VIVA data formats"
authors = []
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pydash = "^4.9.0"
docopt = "^0.6.2"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"

[tool.poetry.scripts]
vivaldi = "vivaldi.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
